兼容Java8